eleiminacion del componente raiz y renderizado en componente formulario

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <componente-raiz></componente-raiz>
-    <script src="./componente-raiz.js" type="module"></script>
+<body style="background-color:rgb(64, 64, 228) ;">
+    <h1 >Top-Automoviles</h1>
+        <div>
+        <componente-formulario></componente-formulario>
+        </div>
+    <script src="./componente-formulario.js" type="module"></script>
 </body>
 </html>
